--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body{
 }
 .trabalhos{
     background-color: rgb(81, 83, 81);
-    background-image: url(../img/cara.jpg);
+    border-radius: 5px;
     width: 200px;
     height: 200px;
     padding: 15px;
