Criação de conteúdo

--- a/src/estiloGlobo.css
+++ b/src/estiloGlobo.css
@@ -95,7 +95,7 @@ nav ul li{
 }
 
 .banner{
-    width: 800px;
+    width: 70%;
     height: 150px;
     background-color: rgb(99, 97, 97);
     padding-left: 90px;
