--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -9,6 +9,7 @@ body{
     height: 150px;
     background-color: rgb(204, 13, 13);
     display: flex;
+    flex-wrap: wrap;
 }
 
 #topo{
@@ -52,6 +53,7 @@ body{
 #logo{
     width: 200px;
     height: 150px;
+    padding: 0px;
     padding-left: 15px;
 }
 
@@ -59,6 +61,7 @@ body{
     width: 400px;
     height: 40px;
     background-color: white;
+    padding: 0px;
     margin-left: 35px;
     margin-top: 49px;
     border-top: 25px;
@@ -78,4 +81,16 @@ body{
     height: 25px;
     padding-left: 135px;
     padding-top: 10px;
+}
+
+#ilogin{
+    width: 30px;
+    height: 30px;
+    padding-left: 450px;
+    padding-top: 0px;
+    
+}
+
+ul li{
+    display: inline-block;
 }
