--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -90,7 +90,12 @@ body{
     padding-top: 0px;
     
 }
-
+nav{
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+}
 ul li{
     display: inline-block;
+    margin: 0px;
 }
