--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -52,8 +52,9 @@ body{
 
 #logo{
     width: 200px;
-    height: 150px;
+    height: 50px;
     padding: 0px;
+    padding-top: 20px;
     padding-left: 15px;
 }
 
@@ -72,30 +73,55 @@ body{
     margin-left: 25px;
 }
 #consulta{
-    border: solid 0px;
+    width: 180px;
+    border: 0px;
     font-size: 1em;
     margin-top: 0px;
 }
 #lupa{
     width: 25px;
     height: 25px;
-    padding-left: 135px;
+    padding-left: 150px;
     padding-top: 10px;
 }
-
-#ilogin{
+#login{
     width: 30px;
     height: 30px;
-    padding-left: 450px;
+    left: 450px;
     padding-top: 0px;
+    margin: 0px;
+    padding-left: 450px;
+}
+#ilogin{
+    width: 20px;
+    height: 20px;
+    padding-top:0px;
+    margin: 0px;
     
 }
 nav{
     margin: 0px;
     border: 0px;
     padding: 0px;
+    padding-left: 5px;
+   
 }
 ul li{
     display: inline-block;
-    margin: 0px;
+    margin-bottom: 0px;
+    padding: 13px;
+    border: 0px;
+}
+
+ul li a{
+    color: white;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    font-weight: bold;
+}
+
+ul li:hover{
+    background-color: rgb(143, 8, 8);
+    border-radius: 5px;
 }
