--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 #pos_topo{
-    width: 100%;
+    width: 1160px;
     height: 150px;
     background-color: rgb(204, 13, 13);
     display: flex;
@@ -59,6 +59,8 @@ body{
 }
 
 #pesq{
+    display: flex;
+    flex-wrap: wrap;
     width: 400px;
     height: 40px;
     background-color: white;
@@ -67,37 +69,63 @@ body{
     margin-top: 49px;
     border-top: 25px;
     border-radius: 10px;
+    
 }
 .pesquisar{
-    margin-top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px;
     margin-left: 25px;
+    
 }
 #consulta{
     width: 180px;
     border: 0px;
     font-size: 1em;
+    margin: 0px;
+    padding: 0px;
     margin-top: 0px;
+   
 }
+
 #lupa{
     width: 25px;
     height: 25px;
+    padding: 0px;
     padding-left: 150px;
-    padding-top: 10px;
+   
 }
 #login{
+    display: flex;
+    width: 300px;
+    color: white;
+    padding-top: 50px;
+    padding-left: 30px;
+}
+#text_login1{
+    width: 150px;
+    padding: 0px;
+    margin: 0px;
+    margin-left: 60px;
+}
+#text_login1 a{
+    text-decoration: none;
+    color: white;
+}
+#text_login2{
+    width: 100px;
+    padding: 0px;
+    margin: 0px;
+    margin-left: 60px;
+}
+#text_login2 a{
+    text-decoration: none;
+    color: white;
+}
+#img_login{
     width: 30px;
     height: 30px;
-    left: 450px;
-    padding-top: 0px;
-    margin: 0px;
-    padding-left: 450px;
-}
-#ilogin{
-    width: 20px;
-    height: 20px;
-    padding-top:0px;
-    margin: 0px;
-    
+    padding: 0px;
 }
 nav{
     margin: 0px;
@@ -124,4 +152,11 @@ ul li a{
 ul li:hover{
     background-color: rgb(143, 8, 8);
     border-radius: 5px;
+}
+
+#loja{
+    padding: 0px;
+    padding-top: 45px;
+    width: 30px;
+    height: 30px;
 }
