--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -2,6 +2,7 @@ body{
     padding: 0px;
     margin: 0px;
     border: 0px;
+    background-color: rgb(228, 217, 217);
 }
 
 #pos_topo{
@@ -14,7 +15,7 @@ body{
 
 #topo{
     display: flex;
-    
+    background-color: white;
 }
 
 #lacta{
@@ -156,7 +157,41 @@ ul li:hover{
 
 #loja{
     padding: 0px;
-    padding-top: 45px;
-    width: 30px;
-    height: 30px;
+    padding-top: 65px;
+    width: 20px;
+    height: 20px;
+}
+#coracao{
+    padding: 0px;
+    padding-top: 65px;
+    padding-left: 10px;
+    width: 20px;
+    height: 20px;
+}
+#cesta{
+    padding: 0px;
+    padding-top: 65px;
+    padding-left: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+.faixa_opcao{
+    width: 1160px;
+    height: 50px;
+    background-color: white;
+    margin: 0px;
+    padding: 0px;
+   
+}
+#faixa{
+    padding-top: 30px;
+    padding-left: 100px;
+}
+#faixa a{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    padding-left: 15px;
+    padding-bottom: 0px;
 }
