--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -187,12 +187,13 @@ ul li:hover{
 }
 #faixa{
     padding-top: 30px;
-    padding-left: 100px;
+    
 }
 #faixa a{
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.8em;
     color: black;
-    padding-left: 15px;
+    padding-left: 25px;
     padding-bottom: 0px;
 }
