--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -197,3 +197,41 @@ ul li:hover{
     padding-left: 25px;
     padding-bottom: 0px;
 }
+
+#banner1{
+    display: flex;
+    background-color: rgb(25, 114, 114);
+    width: 1090px;
+    height: 50px;
+    margin-top: 5px;
+    margin-left: 30px;
+    color: white;
+}
+
+#banner1 p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    padding: 0px;
+    padding-left: 10px;
+    margin-top: 10px;
+    
+}
+.amarelo1{
+    color: yellow;
+    font-weight: bolder;
+    padding: 10px;
+    margin-left: 200px;
+}
+.amarelo{
+    color: yellow;
+    font-weight: bolder;
+    padding: 10px;
+}
+
+#carrocel{
+    width: 1155px;
+    height: 300px;
+    background-color: aqua;
+    margin-top: 5px;
+    margin-left: 2px;
+}
