Trabalhando com slides
Primeiro teste.

--- a/americanas/src/style.css
+++ b/americanas/src/style.css
@@ -235,3 +235,11 @@ ul li:hover{
     margin-top: 5px;
     margin-left: 2px;
 }
+
+.slide{
+    display: none;
+}
+
+.slide-ativo{
+    display: block;
+}
