--- a/carrocel/css.css
+++ b/carrocel/css.css
@@ -36,10 +36,29 @@
     cursor: pointer;
     border: none;
     background: linear-gradient(to left, transparent 0%, black 200%);
+    opacity: 0.1;
+    transition: all 600ms ease-in-out;
     }
 
     .arrow-rigth{
         left: auto;
         right: 0;
         background: linear-gradient(to right, transparent 0%, black 200%);
-        }
+    }
+
+    .arrow-left:hover,
+    .arrow-rigth:hover{
+        opacity: 1;
+    }
+
+    .item{
+        width: 250px;
+        height: 250px;
+        flex-shrink: 0;
+        opacity: 0.6;
+        transition: all 600ms ease-in-out;
+    }
+
+    .current-item{
+        opacity: 1;
+    }
