--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -75,3 +75,23 @@
     margin-right: 2px;
     padding-right: 0; 
 }
+
+nav{
+    width: 100%;
+    height: 30px;
+    padding: 0;
+    background-color: rgb(66, 66, 243);
+    border-top: solid blue;
+    color: white;
+}
+
+nav a{
+    margin-left: 10px;
+    margin-right: 10px;
+    text-decoration: none;
+    padding: 0;
+    padding-top: 10px;
+    color: white;
+    
+    border: solid;
+}
