--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -79,7 +79,9 @@
 nav{
     width: 100%;
     height: 30px;
+    display: flex;
     padding: 0;
+    margin: 0;
     background-color: rgb(66, 66, 243);
     border-top: solid blue;
     color: white;
@@ -90,8 +92,9 @@ nav a{
     margin-right: 10px;
     text-decoration: none;
     padding: 0;
-    padding-top: 10px;
+    padding-top: 5px;
     color: white;
-    
-    border: solid;
+}
+#copasa1{
+    padding-left: 30px;
 }
