--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -82,7 +82,7 @@ nav{
     display: flex;
     padding: 0;
     margin: 0;
-    background-color: rgb(66, 66, 243);
+    background-color: rgb(71, 104, 248);
     border-top: solid blue;
     color: white;
 }
@@ -97,4 +97,21 @@ nav a{
 }
 #copasa1{
     padding-left: 30px;
+}
+
+#link{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1em;
+    padding-left: 180px;
+    padding-top: 20px;
+}
+#link a{
+    text-decoration: none;
+    color: rgb(28, 28, 243);
+}
+hr{
+    color: rgb(28, 28, 243);
+    width: 750px;
+    border: solid 2px; 
+    margin-top: 10px;
 }
