--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -76,7 +76,7 @@
     padding-right: 0; 
 }
 
-#menus{
+nav{
     width: 100%;
     height: 30px;
     display: flex;
@@ -87,7 +87,7 @@
     color: white;
 }
 
-#menus a{
+nav a{
     margin-left: 10px;
     margin-right: 10px;
     text-decoration: none;
@@ -95,17 +95,7 @@
     padding-top: 5px;
     color: white;
 }
-#copasa1{
-    padding-left: 30px;
-    float: left;
-}
-#copasa1 ul li{
-    display: none;
-}
-#copasa1:hover ul{
-    display: block;
 
-}
 
 #link{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
