--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -96,9 +96,7 @@ nav{
     margin-right:5px;
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 0.8em;
-    border: solid 1px black;
-    
+    font-size: 0.8em;    
 }
 #menus #copasaum a{
     padding-left: 40px;
@@ -108,16 +106,21 @@ nav{
 #caixa_menu  {
     position: absolute;
     width: 200px;
-    height: 200px;
+    height: 350px;
     display: none;
+    margin-left: 50px;
+    background-color: rgb(248, 248, 227);
+}
+#caixa_menu li a{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2px;
+    margin: 5px;
 }
 li:hover #caixa_menu {
     display: block;
-    
 }
-#menus #copasaum #caixa_menu li a{
-    color: black;
-}
+
 
 #link{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
