--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -109,6 +109,7 @@ nav{
     height: 350px;
     display: none;
     margin-left: 50px;
+    padding: 3px;
     background-color: rgb(248, 248, 227);
 }
 #caixa_menu li a{
@@ -121,7 +122,30 @@ li:hover #caixa_menu {
     display: block;
 }
 
-
+#menus #g_corporativa a{
+    padding-left: 40px;
+    position: relative;
+}
+#caixa_menu2{
+    position: absolute;
+    width: 200px;
+    height: 450px;
+    display: none;
+    margin-left: 50px;
+    padding: 3px;
+    background-color:rgb(248, 248, 227) ;
+    border: solid 1px black;
+}
+#caixa_menu2 li a{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2px;
+    margin: 5px;
+   
+}
+li:hover #caixa_menu2 {
+    display: block;
+}
 #link{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
