--- a/Copasa/src/estilo.css
+++ b/Copasa/src/estilo.css
@@ -76,6 +76,7 @@
     padding-right: 0; 
 }
 
+/*Configuração básica dos menus*/
 nav{
     background-color: rgb(105, 105, 238);
     width: 100%;
@@ -98,6 +99,7 @@ nav{
     padding-right: 10px;
     font-size: 0.8em;    
 }
+/*Configuração do menu copasa */
 #menus #copasaum a{
     padding-left: 40px;
     position: relative;
@@ -111,6 +113,7 @@ nav{
     margin-left: 50px;
     padding: 3px;
     background-color: rgb(248, 248, 227);
+    border: solid 1px bisque;
 }
 #caixa_menu li a{
     color: black;
@@ -122,6 +125,7 @@ li:hover #caixa_menu {
     display: block;
 }
 
+/*Configuração do menu Governança Corporativa */
 #menus #g_corporativa a{
     padding-left: 40px;
     position: relative;
@@ -134,7 +138,8 @@ li:hover #caixa_menu {
     margin-left: 50px;
     padding: 3px;
     background-color:rgb(248, 248, 227) ;
-    border: solid 1px black;
+    border: solid 1px bisque;
+    
 }
 #caixa_menu2 li a{
     color: black;
@@ -144,6 +149,87 @@ li:hover #caixa_menu {
    
 }
 li:hover #caixa_menu2 {
+    display: block;
+}
+
+/*Configuração do menu água */
+#menus #agua a{
+    padding-left: 40px;
+    position: relative;
+}
+#caixa_menu3{
+    position: absolute;
+    width: 200px;
+    height: 450px;
+    display: none;
+    margin-left: 50px;
+    padding: 3px;
+    background-color:rgb(248, 248, 227) ;
+    border: solid 1px bisque;
+    
+}
+#caixa_menu3 li a{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2px;
+    margin: 5px;
+   
+}
+li:hover #caixa_menu3 {
+    display: block;
+}
+
+/*Configuração do menu esgoto */
+#menus #esgoto a{
+    padding-left: 40px;
+    position: relative;
+}
+#caixa_menu4{
+    position: absolute;
+    width: 200px;
+    height: 250px;
+    display: none;
+    margin-left: 50px;
+    padding: 3px;
+    background-color:rgb(248, 248, 227) ;
+    border: solid 1px bisque;
+    
+}
+#caixa_menu4 li a{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2px;
+    margin: 5px;
+   
+}
+li:hover #caixa_menu4 {
+    display: block;
+}
+
+/*Configuração do menu Meio Ambiente */
+#menus #meio_ambiente a{
+    padding-left: 40px;
+    position: relative;
+}
+#caixa_menu5{
+    position: absolute;
+    width: 200px;
+    height: 250px;
+    display: none;
+    margin-left: 50px;
+    padding: 3px;
+    background-color:rgb(248, 248, 227) ;
+    border: solid 1px bisque;
+    
+}
+#caixa_menu5 li a{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2px;
+    margin: 5px;
+   
+}
+li:hover #caixa_menu5 {
     display: block;
 }
 #link{
